--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=3000
 ETHEREUM_RPC_URL=your_ethereum_rpc_url_here
 OPENSEA_API_KEY=your_opensea_api_key_here
 ALCHEMY_API_KEY=your_alchemy_api_key_here
+
+# Database
+DB_PATH=./database/nftscope.db
