--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.4.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
